--- a/README.rdoc
+++ b/README.rdoc
@@ -1,11 +1,13 @@
 == README
 
+
+
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
 Things you may want to cover:
 
-* Ruby version
+* Ruby version 2.1
 
 * System dependencies
 
@@ -26,3 +28,6 @@ Things you may want to cover:
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
+
+
